--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,4 @@ Phase 3 - Data analysis.html
 dummy_regression_results.tex
 regression_results.tex
 joined_dataset.rds
-
+Phase-3---Data-analysis.pdf
